fix(social-media): :adhesive_bandage: Unexpected media card overflow

--- a/css/pages/02_connect-social.css
+++ b/css/pages/02_connect-social.css
@@ -78,7 +78,7 @@
 
 #connect-social .media {
   position: relative;
-  padding: 10%;
+  /* padding: 10%; */
   margin: 0 -1px;
 
   display: flex;
